# BERTrend

./: .env_template  CHANGELOG.md  Dockerfile  Dockerfile.embedding_server  README.md  check_opened_files.sh  copyright.txt  docker-compose.yml  pyproject.toml  run_demos.sh  supervisord.conf
.github/workflows/: codeql.yml  publish.yml  pytest.yaml  ruff.yml  version-increment.yml
.junie/: guidelines.md
bertrend/: BERTopicModel.py  BERTrend.py  __init__.py
bertrend/article_scoring/: article_scoring.py  prompts.py  scoring_agent.py
bertrend/bertrend_apps/: __init__.py  install_feeds_and_newsletters.py
bertrend/bertrend_apps/common/: apscheduler_utils.py  crontab_utils.py  date_utils.py  mail_utils.py  scheduler_utils.py
bertrend/bertrend_apps/data_provider/: __init__.py  __main__.py  arxiv_provider.py  atom_feed_provider.py  bing_news_provider.py  (+7 more)
bertrend/config/: bertopic_default_config.toml  services_default_config.toml
bertrend/demos/: start_summarizer_app.sh  start_topic_analysis_app.sh  start_weak_signals_app.sh
bertrend/llm_utils/: agent_utils.py  newsletter_features.py  newsletter_model.py  openai_client.py
bertrend/metrics/: temporal_metrics_embedding.py  topic_metrics.py
bertrend/services/: authentication.py  embedding_client.py  embedding_service.py  summarizer.py  summary_client.py
bertrend/tests/: conftest.py  test_bertrend_service.py  test_installation.py  test_integration.py
bertrend/topic_analysis/: visualizations.py
bertrend/trend_analysis/: prompts.py  visualizations.py  weak_signals.py
bertrend/utils/: __init__.py  cache_utils.py  data_loading.py
bertrend_apps/: __init__.py  install_feeds_and_newsletters.py
bertrend_apps/common/: apscheduler_utils.py  crontab_utils.py  date_utils.py  mail_utils.py  scheduler_utils.py
bertrend_apps/data_provider/: __init__.py  __main__.py  arxiv_provider.py  atom_feed_provider.py  data_provider.py  data_provider_utils.py  google_news_provider.py  newscatcher_provider.py  rss_feed_provider.py  utils.py
bertrend_apps/exploration/: start_apps.sh
bertrend_apps/newsletters/: __main__.py  newsletter_generation.py  utils.py
bertrend_apps/prospective_demo/: __init__.py  app.py  automated_report_generation.py  dashboard_analysis.py  dashboard_common.py  dashboard_comparative.py  dashboard_signals.py  data_model.py  feeds_config.py  feeds_data.py  i18n.py  i18n_translations.py  models_info.py  process_new_data.py  report_generation.py  report_generation_utils.py  start_demo.sh
bertrend_apps/services/: bertrend_service.py  logging_utils.py  start.py  status.py  stop.py
docs/: concurrency.md  data_provider.md  mail_configuration.md  newsletters.md  process_new_data_outputs.md  queue_architecture.md
docs/api/: README.md  article_scoring.md  core_library.md  data_providers.md  llm_utils.md  metrics.md  services.md  topic_analysis.md  trend_analysis.md
docs/demos/: demos.md
docs/services/: article_scoring_service.md  bertrend_api_service.md  embedding_service.md  queue_architecture.md  scheduling_service.md  summary_service.md
getting_started/: bertrend_quickstart.ipynb
(+238 files in other folders)
