[project]
name = "bertrend"
version = "0.4.2"
description = "BERTrend analyses topic evolution over time using state-of-the-art transformer models: topic modelling and LLM"
license = "LICENSE.md"
readme = "README.md"
requires-python = ">=3.12,<4.0"
authors = [
    { name = "Jérôme Picault", email = "jerome.picault@rte-france.com" },
    { name = "Guillaume Grosjean", email = "guillaume.grosjean@rte-france.com>" },
    { name = "Allaa Boutaleb", email = "allaa.boutaleb@lip6.fr>" }
]
maintainers = [
    { name = "Jérôme Picault", email = "jerome.picault@rte-france.com" },
    { name = "Guillaume Grosjean", email = "guillaume.grosjean@rte-france.com>" },
]
keywords = ["topics", "BERTopic", "transformers", "weak signals", "LLM", "trend analysis"]
classifiers = ["Topic :: Scientific/Engineering :: Artificial Intelligence"]

dependencies = [
    "APScheduler (>=3.11.2)",
    "ipython (>=8.28.0)",
    "bertopic (>=0.16.2)", # not fully tested with more recent versions
    "coverage>=7.13.2",
    "cron-descriptor (>=2.0.6)",
    "datamapplot (>=0.6.4)",
    "dateparser (>=1.2.2)",
    "dill (>=0.4.1)",
    "fastapi (>=0.128.0)",
    "gensim (>=4.4.0)",
    "hdbscan (>=0.8.41)",
    "joblib (>=1.5.3)",
    "jsonlines (>=4.0.0)",
    "langdetect (>=1.0.9)",
    "langchain-core (>=1.2.9)",
    "loguru (>=0.7.3)",
    "lxml-html-clean (>=0.4.3)",
    "markdown (>=3.10.1)",
    "nltk (>=3.9.2)",
    "openai (>=2.18.0)",
    "openai-agents[litellm] (>=0.8.3)",
    "openpyxl (>=3.1.5)",
    "pandas (<3.0.0)",
    "plotly (>=6.5.2)",
    "plotly-resampler (>=0.11.0)",
    "PyJWT (>=2.11.0)",
    "pytest",
    "pytest-asyncio",
    "python-dotenv (>=1.2.1)",
    "scikit-learn (>=1.8.0)",
    "sentence-transformers (>=5.2.2)",
    "starlette (>=0.52.1)",
    "requests (>=2.32.3)",
    "seaborn (>=0.13.2)",
    "streamlit (>=1.54.0)",
    "streamlit-code-editor (>=0.1.22)",
    "SQLAlchemy (>=2.0.46)",
    "supervisor (>=4.3.0)",
    "tldextract (>=5.3.1)",
    "thefuzz (>=0.22.1)",
    "torch (>=2.10.0)",
    "tqdm (>=4.67.3)",
    "tiktoken (>=0.12.0)",
    "typer (>=0.21.1)",
    "umap-learn (>=0.5.11)",
    "ruff>=0.15.0",
    "psutil>=7.2.2",
    "pika>=1.3.2",
    "aio-pika>=9.5.5",
    "arxiv>=2.4.0",
    "feedparser>=6.0.12",
    "googlenewsdecoder>=0.1.7",
    "google-api-python-client>=2.189.0",
    "google-auth-oauthlib>=1.2.4",
    "goose3>=3.1.21",
    "newscatcher-sdk>=1.4.0",
    "newspaper4k>=0.9.3.1",
    "pygooglenews>=0.1.3",
    "streamlit-folium>=0.26.1",
    "folium>=0.20.0",
    "geopy>=2.4.1",
    "ddgs>=9.10.0",
]

[project.urls]
homepage = "https://github.com/rte-france/BERTrend"
repository = "https://github.com/rte-france/BERTrend"
documentation = "https://github.com/rte-france/BERTrend"
"Bug Tracker" = "https://github.com/rte-france/BERTrend/issues"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
